# Vaultix

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml  run-server.py
alembic/: env.py
configurations/: OAuth.py  cache-revise.py  cache.py  db_config.py  email_config.py  environments.py  main.py  middlewares.py  router.py  sentry.py
inf/Docker/backend/: Dockerfile
inf/Docker/frontend/: Dockerfile
inf/Docker/nginx/: nginx.conf
inf/Docker/postgres/: .environment
src/v1/: utils.py
src/v1/middlewares/: auth_dependency.py
src/v1/models/: user.py
src/v1/schemas/: api_response_schema.py  auth_schema.py  email_schema.py  forgot_password_schema.py  github_schema.py  google_schema.py  profile_schema.py  register_schema.py
src/v1/services/: base_auth_service.py  base_oauth_service.py  cookie_service.py  email_service.py  forgot_password_service.py  github_service.py  google_service.py  magic_link_service.py  multipurpose_login_service.py  otp_service.py  password_service.py  profile_email_service.py  profile_info_service.py  profile_phone_service.py  register_service.py  token_service.py
src/v1/views/login/: MagicLink_auth.py  email_auth.py  github_auth.py  google_auth.py  phone_auth.py  token_view.py
src/v1/views/register/: local_individual_register.py
src/v1/views/user/: email_view.py  fogot_password_view.py  phone_view.py  profile_view.py
